--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,11 @@
                 <version>${zzyl.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.zzyl</groupId>
+                <artifactId>zzyl-nursing-platform</artifactId>
+                <version>${zzyl.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -192,6 +197,8 @@
         <module>zzyl-quartz</module>
         <module>zzyl-generator</module>
         <module>zzyl-common</module>
+        <module>zzyl-nursing-platform</module>
+        <module>zzyl-nursing-platform</module>
     </modules>
     <packaging>pom</packaging>
 
