--- a/zzyl-admin/pom.xml
+++ b/zzyl-admin/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>zzyl-generator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.zzyl</groupId>
+            <artifactId>zzyl-nursing-platform</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
