--- a/zzyl-nursing-platform/pom.xml
+++ b/zzyl-nursing-platform/pom.xml
@@ -22,5 +22,13 @@
             <groupId>com.zzyl</groupId>
             <artifactId>zzyl-common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.zzyl</groupId>
+            <artifactId>zzyl-admin</artifactId>
+            <version>3.8.8</version>
+        </dependency>
     </dependencies>
+
+
 </project>
