--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>3.8.8</version>
 
     <name>zzyl</name>
-    <url>http://www.ruoyi.vip</url>
-    <description>中州养老</description>
+    <url>http://www.zzyl.vip</url>
+    <description>中州养老后台管理系统</description>
     
     <properties>
         <zzyl.version>3.8.8</zzyl.version>
@@ -31,6 +31,8 @@
         <poi.version>4.1.2</poi.version>
         <velocity.version>2.3</velocity.version>
         <jwt.version>0.9.1</jwt.version>
+        <lombok.version>1.18.22</lombok.version>
+        <mybatis-plus-spring-boot.version>3.5.2</mybatis-plus-spring-boot.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -187,8 +189,28 @@
                 <artifactId>zzyl-nursing-platform</artifactId>
                 <version>${zzyl.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+
+            <!-- mybatis-plus 增强CRUD -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus-spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-annotation</artifactId>
+                <version>${mybatis-plus-spring-boot.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+
 
     <modules>
         <module>zzyl-admin</module>
