--- a/zzyl-nursing-platform/pom.xml
+++ b/zzyl-nursing-platform/pom.xml
@@ -24,9 +24,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.zzyl</groupId>
-            <artifactId>zzyl-admin</artifactId>
-            <version>3.8.8</version>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
         </dependency>
     </dependencies>
 
